# mpk

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  MPK.ipynb  Makefile  annotated.html  args_8h_source.html  buffers_8h_source.html  classBuffers-members.html  classBuffers.html  classBuffers__coll__graph.dot  classBuffers__coll__graph.md5  classBuffers_a3f4cb9c9ca00ed0d808fb66c437f6862_cgraph.dot  classBuffers_a3f4cb9c9ca00ed0d808fb66c437f6862_cgraph.md5  classBuffers_af7dbf0fcaf744d6f6cfee51161bc3e5a_icgraph.dot  classBuffers_af7dbf0fcaf744d6f6cfee51161bc3e5a_icgraph.md5  classCommCompPatterns-members.html  classCommCompPatterns.html  classCommCompPatterns__coll__graph.dot  classCommCompPatterns__coll__graph.md5  classCommCompPatterns_a1f863fe418b25e08d31e0c9bf2ed33b7_icgraph.dot  classCommCompPatterns_a1f863fe418b25e08d31e0c9bf2ed33b7_icgraph.md5  classCommCompPatterns_a250df4c9f57d6189cdb422d2e728f71c_icgraph.dot  classCommCompPatterns_a250df4c9f57d6189cdb422d2e728f71c_icgraph.md5  classCommCompPatterns_a3d776059f831816b56c1b98e2581d1c6_icgraph.dot  classCommCompPatterns_a3d776059f831816b56c1b98e2581d1c6_icgraph.md5  classCommCompPatterns_a645aad5ba785a49c8d4f7a050632b447_cgraph.dot  classCommCompPatterns_a645aad5ba785a49c8d4f7a050632b447_cgraph.md5  classCommCompPatterns_a645aad5ba785a49c8d4f7a050632b447_icgraph.dot  classCommCompPatterns_a645aad5ba785a49c8d4f7a050632b447_icgraph.md5  classCommCompPatterns_a6cf53b9b2d6cf34ca6cd4b620b439eb1_icgraph.dot  classCommCompPatterns_a6cf53b9b2d6cf34ca6cd4b620b439eb1_icgraph.md5  classCommCompPatterns_a772665118ad2517205c2e077fa6e88bd_icgraph.dot  classCommCompPatterns_a772665118ad2517205c2e077fa6e88bd_icgraph.md5  classCommCompPatterns_a8610af34a20cc6092967476f4470ba11_icgraph.dot  classCommCompPatterns_a8610af34a20cc6092967476f4470ba11_icgraph.md5  classCommCompPatterns_a8c0614eef59578163a12f49b550be7d6_icgraph.dot  classCommCompPatterns_a8c0614eef59578163a12f49b550be7d6_icgraph.md5  classCommCompPatterns_a980e9643b0785e440b3d173159e7c16f_cgraph.dot  (+237 more)
.githooks/: pre-commit
apps/: CMakeLists.txt  check.cc  exec.cc  prep.cc
check/: CMD
docs/: CMakeLists.txt  Doxyfile.in  mainpage.dox
docs/tables/: mirror-M1.txt  mirror-M1mod.txt  no-mirror.txt
jupyter/: graphvis.ipynb  matperm.ipynb  python-test.ipynb  s-step-cg.ipynb  sage-test.ipynb
lab/: CMakeLists.txt  Makefile  barchart.tex  csum_xenon2_4_10_3_2.txt  data1.txt  dbg.cmd  dbls.cc  dbls_c.c  dbls_py.py  emptyvec.cc  lapjv.c  lapjv_test.cc  metis_test.c  mpi.cpp  mpi_double_wait.cc  mpi_labtest1.cpp  mpigraph.cpp  mpigraph.h  newindex.cpp  riter.cc  tmp.cc
lab/gcov_project/: CMakeLists.txt
lab/gcov_project/src/: main.cc
mpk2/: Doxyfile  Makefile  batch_gen.sh  batch_mtx.sh  buffers.c  buffers.h  collect-logs.sh  comm_count.c  comm_data.c  comm_data.h  common.mk  comp.c  csum_xenon2_4_10_3_1.txt  driver.c  driver.sh  format.c  gen.c  gen2.c  gen2mtx.c  hills.py  instability.c  lapjv.h  lib.c  lib.h  mainpage.dox  makefile  makefile.gcc  makefile.intel  measure.sh  merge_vv.py  mmio.c  mpi.sh  mpi2_lib.h  mpi2_mpkexec.c  mpi2_mpkexec.h  mpi2_mpkexecbufs.c  mpi2_mpkexecbufs_val.c  mpi2_mpkprep.c  mpi2_mpktest.c  mpi2_mpkwrtbufs.c  (+38 more)
mpk2/.githooks/: readme
old/: comp.c  lib.c  run  skirt.c
old_cpp/: Makefile  dmpk.cpp  leveledgraph.cpp  leveledgraph.hpp
org/: mpk.org  mpk_notes.org  seminarA.org
org-latex/: inc-beamer.org  readme.org
org-latex/sparsity/: tmp.org
pdmpk/: Buffers.cc  Buffers.h  CMakeLists.txt  CSR.cc  CSR.h  CommCompPatterns.cc  CommCompPatterns.h  Doxyfile  MCSR.cc  MPIBuffers.cc  MPIBuffers.h  Makefile  PDMPKBuffers.cc  PDMPKBuffers.h  Results.cc  Results.h  args.cc  args.h  buffers.cc  buffers.h  buffers_t.cc  buffers_t.h  buffers_t_new.cc  buffers_t_new.h  cmds.gdb  comm_comp_patterns.cc  comm_comp_patterns.h  comm_dict_demo.cc  comm_dict_t.cc  comm_dict_t.h  crs_t.cc  crs_t.h  csr.cc  csr.h  csr_t.cc  csr_t.h  debug_csr_val.gdb  debugger.cc  debugger.h  lapjv.c  (+30 more)
scripts/: batch_proc.sh  gen_matrices.sh  get_matrices.sh  get_stats.sh  matrix_list.txt  org-tbls.py  prep_exec_test.sh
scripts/cg_kokkos/: CMakeLists.txt  cg_kokkos.cc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+33 more)
tests/: CMakeLists.txt  CTestCustom.cmake.in  gen_test.sh  get_test.sh  m5p4-4-4.sh  m5p_test.sh
